# pyrender

./: AGENTS.md  README.md  pyproject.toml
examples/: duck.py
pyrender/: viewer.py
