[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrender"
version = "0.1.45"
description = "Easy-to-use Python renderer for 3D visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matthew Matl", email = "matthewcmatl@gmail.com"}
]
keywords = ["rendering", "graphics", "opengl", "3d", "visualization", "pbr", "gltf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "freetype-py>=2.5.1",
    "imageio>=2.37.2",
    "networkx>=3.6.1",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pyglet>=2.0.0,<3",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "six>=1.17.0",
    "trimesh>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-automodapi>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/mmatl/pyrender"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrender*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
